<resources>
    <string name="app_name">Velad</string>
    <string name="undefined">Sin definir</string>

    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>

    <string name="menu_item_title_today">Hoy</string>
    <string name="menu_item_title_diary">Diario</string>
    <string name="menu_item_title_week">Semana</string>
    <string name="menu_item_title_reports">Reportes</string>
    <string name="menu_item_title_settings">Configuración</string>

    <string name="menu_item_title_add">Agregar</string>
    <string name="menu_item_title_filter">Filtrar</string>
    <string name="menu_item_title_save">Guardar</string>
    <string name="menu_item_title_later">Ahora no</string>
    <string name="menu_item_title_register">Registrar</string>
    <string name="menu_item_title_delete">Borrar</string>
    <string name="menu_item_title_deactivate">Desactivar</string>

    <string name="error_message_missing_field">Por favor, llene todos los campos</string>

    <string name="diary_confess_confirmation_text">Registrar confesión?</string>
    <string name="diary_confess_confirmation_action">Registrar</string>

    <string name="action_mode_delete_title">Seleccionado</string>

    <string name="note_activity_title">Nota</string>
    <string name="note_form_field_note">Nota</string>
    <string name="note_form_field_date">Fecha</string>
    <string name="note_form_field_type">Tipo</string>

    <string name="groups_activity_title">Grupos</string>
    <string name="groups_row_info_sing">1 punto</string>
    <string name="groups_row_info_plur">%d puntos</string>

    <string name="profile_activity_title">Perfil</string>
    <string name="profile_form_field_name">Nombre</string>
    <string name="profile_form_field_circle">Círculo</string>
    <string name="profile_form_field_group">Grupo</string>

    <string name="menu_item_filter_all_title">Mostrar todas</string>
    <string name="menu_item_filter_regular_title">Regulares</string>
    <string name="menu_item_filter_confessable_title">Confesables</string>
    <string name="menu_item_filter_confessed_title">Confesadas</string>
    <string name="menu_item_filter_guidance_title">Guiamiento</string>
    <string name="menu_item_filter_weekly_title">Por semana</string>

    <string name="date_interval_picker_return_weekly_title">Ir a la semana actual</string>
    <string name="date_picker_return_today_title">Ir al día actual</string>

    <string name="settings_profile_title">Perfil</string>
    <string name="settings_security_title">Seguridad</string>
    <string name="settings_cheer_title">Mensajes de ánimo</string>
    <string name="settings_monday_title">Empezar el lunes</string>
    <string name="settings_restore_title">Restaurar información</string>
    <string name="settings_opinion_title">Danos tu opinión</string>
    <string name="settings_licenses_title">Licencias</string>
    <string name="settings_open_source_title">Código abierto</string>
    <string name="settings_version_title">Versión</string>

    <string name="settings_monday_details">Al estar seleccionado, todos los intervalos semanales empezarán el día Lunes.\n\nCaso contrario, se usará la configuración de región del dispositivo.</string>

    <string name="diary_email_week_format">Semana %s\n\n</string>
    <string name="diary_email_confession_format">Última confesión: %s\n\n</string>
    <string name="diary_email_notes_header">Mis notas:\n\n</string>
    <string name="profile_information_name_format">Nombre: %s\n</string>
    <string name="profile_information_circle_format">Círculo: %s\n</string>
    <string name="profile_information_group_format">Grupo: %s\n</string>
    <string name="default_group_name">Puntos Básicos</string>
    <string name="dialog_note_hint">Agregar notas</string>
    <string name="week_email_report_header">Reporte semanal:\n\n</string>
    <string name="encouragement_alert_text">Felicitaciones!\n\nEstás haciendo un trabajo excelente!\n\n\uD83C\uDF89 \uD83C\uDF8A \uD83C\uDF89 \uD83C\uDF8A \uD83C\uDF89 \uD83C\uDF8A</string>
    <string name="dialog_group_hint">Nombre</string>
    <string name="group_activity_title">Puntos Básicos</string>

    <string-array name="basic_points_seed">
        <item>Oración</item>
        <item>Eucaristía</item>
        <item>Abnegación</item>
        <item>Vigilancia</item>
        <item>Amor a la Virgen</item>
        <item>Conocimiento serio de la fe</item>
    </string-array>

    <string-array name="encouragement_values">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>
</resources>
