<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:title="@string/menu_item_title_today"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_diary"
            android:title="@string/menu_item_title_diary"
            android:icon="@drawable/ic_assignment_black_24dp"/>
        <item
            android:id="@+id/nav_week"
            android:title="@string/menu_item_title_week"
            android:icon="@drawable/ic_event_black_24dp"/>
        <item
            android:id="@+id/nav_reports"
            android:title="@string/menu_item_title_reports"
            android:icon="@drawable/ic_timeline_black_24dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_item_title_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>
</menu>
